--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e864a0c
+	base = 337d19d
 	trimbase = 
 	parent = release/kinetic/app_manager
-	previous = 
+	previous = e864a0c
