--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5e2d97d
+	base = 419f25b
 	trimbase = 
 	parent = arch/kinetic/app_manager
-	previous = 
+	previous = 5e2d97d
